--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,29 +1,43 @@
-
 .hero-background {
+  position: relative;                
   background-image: url("src/images/HeroImage.png");
-  width: 100%;
-  height: 60vh;
-  aspect-ratio: 16 / 9;          
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-
+  width: 100%;
+  height: 100vh;
+  
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction:column;
+  flex-direction: column;
+  overflow: hidden; 
 }
 
-.hero-title{
+
+.hero-background::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5); 
+  z-index: 0;
+}
+
+
+.hero-title,
+.hero-motto {
+  position: relative;
+  z-index: 1;
   color: white;
+}
+
+.hero-title {
   font-size: 45px;
-  font-weight:bold;
+  font-weight: bold;
   margin: 0;
-  
 }
 
 .hero-motto {
-  color: white;              
   font-size: 20px;
-  margin: 0;       
+  margin: 0;
 }
