--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,6 +1,6 @@
 .hero-background {
   position: relative;                
-  background-image: url("src/images/HeroImage.png");
+  background-image: url("public/images/HeroImage.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
